修改编码