@@ -9,12 +9,12 @@ import com.example.userlogin.utils.RedisUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 
 /**
  * 在前端渲染登录页面时，就会向后端请求获取验证码，该接口需将验证码图片用base64编码后传给前端，并将验证码对应的随机码也传给前端
@@ -44,10 +44,8 @@ public class KaptchaController {
         File outputfile = new File(filePath);
         ImageIO.write(image, "jpg", outputfile);
  */
-        BASE64Encoder encoder = new BASE64Encoder();
-        String str = "data:image/jpeg;base64,";
-
-        String base64Img = str + encoder.encode(outputStream.toByteArray());
+        byte[] imageBytes = outputStream.toByteArray();
+        String base64Img = "data:image/jpeg;base64," + Base64.getEncoder().encodeToString(imageBytes);
 
         redisUtil.hset(Const.CAPTCHA_KEY, key, code, 120);
 
